I18n Add metadata files, update some missing words

--- a/packages/ia-components/sandbox/languages/google/_.txt
+++ b/packages/ia-components/sandbox/languages/google/_.txt
@@ -216,3 +216,13 @@ web pages
 Working on
 write a review
 Your search did not match any items in the Archive. Suggestions
+by
+Publication date
+Topics
+Publishers
+Sponsor
+Contributors
+OCR
+Run time
+PPI
+
