--- a/packages/ia-components/sandbox/languages/google/english.txt
+++ b/packages/ia-components/sandbox/languages/google/english.txt
@@ -216,4 +216,12 @@ web pages
 Working on
 write a review
 Your search did not match any items in the Archive. Suggestions
-Uploader
+by
+Publication date
+Topics
+Publishers
+Sponsor
+Contributors
+OCR
+Run time
+PPI
