--- a/packages/ia-components/sandbox/languages/google/hindi.txt
+++ b/packages/ia-components/sandbox/languages/google/hindi.txt
@@ -13,7 +13,7 @@
 नहीं मिल सकता है या मेटाडेटा नहीं है
 से बदलती भाषा
 भाषा को बदलना
-प्लेयर ट्राय फ़्लैश पहले क्लिक करें, फिर HTML5 सेकंड
+प्लेयर ट्राय फ्लैश पहले क्लिक करें, फिर एचटीएमएल 5 सेकंड
 संग्रह
 संग्रह
 संग्रह
@@ -28,7 +28,7 @@
 द्वारा क्रॉल किया गया
 सब रेंगते हुए
 रेंगने का विवरण
-कटा हुआ मेटाडेटा
+कटा मेटाडाटा
 रेंगती हुई टाइल
 क्रॉल
 रचनाकार
@@ -40,7 +40,7 @@
 दिनांक संग्रहीत
 दिनांकित
 प्रकाशित तिथि
-दिनांकित समीक्षा
+दिनांकित
 तिथि की समीक्षा की गई
 विकेंद्रीकृत इंटरनेट आर्काइव
 विवरण
@@ -112,6 +112,7 @@ etree
 आगे
 डाउनलोड नहीं हुआ
 का
+ऑफलाइन
 पर
 इंटरनेट पर।
 पूर्ण आकार की छवि खोलें
@@ -126,6 +127,7 @@ etree
 प्लस-चक्र
 पोस्टर
 पोस्ट
+पूर्वावलोकन
 पिछला
 प्रगति
 परियोजनाओं
@@ -175,7 +177,7 @@ SIMILAR आइटम (मेटाडेटा पर आधारित)
 सॉफ्टवेयर
 इसके अनुसार क्रमबद्ध करें
 ध्वनि बंद है। ध्वनि के लिए क्लिक करें
-ध्वनि चालू है। ध्वनि को म्यूट करने के लिए क्लिक करें।
+ध्वनि जारी है ध्वनि को म्यूट करने के लिए क्लिक करें।
 स्पैम, घोटाला या धोखाधड़ी
 अभी भी लागू किया जा रहा है
 विषय
