--- a/packages/ia-components/sandbox/languages/google/japanese.txt
+++ b/packages/ia-components/sandbox/languages/google/japanese.txt
@@ -87,7 +87,7 @@ DWebでまだサポートされていないフォーラム-レガシーWebへ
 コレクションで
 情報
 インターネットアーカイブ
-何百万もの無料の本、映画、ソフトウェア、音楽、ウェブサイトなどの非営利ライブラリです。
+無料の本、映画、ソフトウェア、音楽、ウェブサイトなどの無数の非営利ライブラリです。
 項目
 項目
 アイテム画像
@@ -112,6 +112,7 @@ DWebでまだサポートされていないフォーラム-レガシーWebへ
 次
 ダウンロードしていない
 の
+オフライン
 オン
 インターネット上で。
 フルサイズの画像を開く
@@ -126,6 +127,7 @@ DWebでまだサポートされていないフォーラム-レガシーWebへ
 プラスサークル
 ポスター
 投稿
+プレビュー
 前
 進捗
 プロジェクト
@@ -153,7 +155,7 @@ DWebでまだサポートされていないフォーラム-レガシーWebへ
 検索メタデータ
 検索オプション
 アーカイブを検索する
-アーカイブを検索します。以下で利用できるフィルターと高度な検索。
+アーカイブを検索します。以下で利用可能なフィルターと高度な検索。
 3,380億以上の歴史を検索
 ウェイバックマシンを検索する
 テレビの字幕を検索
