--- a/packages/ia-components/sandbox/languages/google/marathi.txt
+++ b/packages/ia-components/sandbox/languages/google/marathi.txt
@@ -112,6 +112,7 @@ URL किंवा कीवर्ड प्रविष्ट करा
 पुढे
 डाउनलोड केलेले नाही
 च्या
+ऑफलाइन
 चालू
 इंटरनेट वर.
 पूर्ण आकाराची प्रतिमा उघडा
@@ -126,6 +127,7 @@ URL किंवा कीवर्ड प्रविष्ट करा
 अधिक-मंडळ
 पोस्टर
 पोस्ट
+पूर्वावलोकन
 मागील
 प्रगती
 प्रकल्प
@@ -205,7 +207,7 @@ URL किंवा कीवर्ड प्रविष्ट करा
 दृश्ये
 व्हॉलंटियर
 वाट पहात आहे
-अजून पाहिजे?
+अधिक पाहिजे?
 वेब
 वेब
 वेब
