--- a/packages/ia-components/sandbox/languages/google/myanmar.txt
+++ b/packages/ia-components/sandbox/languages/google/myanmar.txt
@@ -1,216 +1,218 @@
 အကြောင်း
 အကောင့်
-ACTIVITY အား
 လှုပ်ရှားမှု
-ဆန်းစစ်ခြင်း Add
-အဆင့်မြင့်အသေးစိတ်ဥပမာများနှင့်အကူအညီနဲ့မြှုပ်ထားခြင်း
-Attribution-ရယူထားရတာ-NoDerivs
-audio
+လှုပ်ရှားမှု
+သုံးသပ်ချက်ထည့်ပါ
+အသေးစိတ်ထည့်သွင်းထားသောအသေးစိတ်အချက်အလက်များ၊ ဥပမာများနှင့်အကူအညီ
+Attribution-NonCommercial-NoDerivs
 အသံ
-ပထမဦးဆုံးတဦးတည်းဖြစ်
-ဘလော့ခ်
-ကျိုးသို့မဟုတ် Empty ဒေတာများ
-မတွေ့ရှိနိုင်ပေသို့မဟုတ် metadata ကိုမရှိပါဘူး
-ကနေပြောင်းခြင်းဘာသာစကား
+အသံ
+ပထမ ဦး ဆုံးဖြစ်ရန်
+Blog
+ပျက်စီးနေသောသို့မဟုတ်အချည်းနှီးသောဒေတာများ
+ရှာမတွေ့ပါသို့မဟုတ် metadata မရှိပါ
 မှဘာသာစကားပြောင်းခြင်း
-ပထမဦးဆုံးကစားသမားပါ Flash မီးများဖို့ကိုနှိပ်ပါ, ထို့နောက် HTML5 ကိုဒုတိယ
+ဘာသာစကားသို့ပြောင်းခြင်း
+ကစားသမားကိုအရင်စမ်းကြည့်ပါ၊ ပြီးနောက် HTML5 ဒုတိယရှိသည်
 စုဆောင်းမှု
 စုဆောင်းမှု
 စုဆောင်းမှု
 Collections
-စုစည်းမှုများ
+collection များကို
 မှတ်ချက်
 မှတ်ချက်များ
-ပြီးစီး
-ဖျော်ဖြေပွဲ
-ချိတ်ဆက်ခြင်း
+ပြီးစီးခဲ့သည်
+ဖျော်ဖြေပွဲများ
+ဆက်သွယ်ခြင်း
 ဆက်သွယ်ရန်
-အားဖြင့်ရောက်ခဲ့တဲ့
-အားလုံးတွား
+နေပြည်တော်
+အားလုံးတွားသွား
 အသေးစိတ်ကိုတွား
-တွား metadata ကို
-တွား tile ကို
-တွား
-CREATOR
+တွားသွား metadata
+တွားသွားတွား
+က
+တီထွင်သူ
 ဖန်ဆင်းရှင်
-ဖန်တီးသူ
-ခရက်ဒစ်
-နေ့စှဲ
-DATE ရက်စွဲအရမော်ကွန်းတင်
-နေ့စွဲမော်ကွန်းတင်ပြီး
-DATE ရက်စွဲအရ Published
-နေ့စွဲ Published
-DATE ရက်စွဲအရပြန်လည်သုံးသပ်
-နေ့စွဲသုံးသပ်ရန်
-ဗဟိုချုပ်ကိုင်မှုကိုအင်တာနက်မော်ကွန်းတိုက်
-DESCRIPTION
-ဖေါ်ပြချက်
+မင်းသား
+ချေးငွေ
+ရက်စွဲ
+ရက်စွဲ Archive
+မော်ကွန်းတင်သည့်နေ့စွဲ
+ရက်စွဲထုတ်ဝေခဲ့သည်
+ထုတ်ဝေသည့်နေ့စွဲ
+ရက်စွဲပြန်လည်သုံးသပ်
+ပြန်လည်သုံးသပ်ရက်စွဲ
+ဗဟိုချုပ်ကိုင်မှုမရှိသောအင်တာနက်မော်ကွန်းတိုက်
+ဖော်ပြချက်
+ဖော်ပြချက်
 အသေးစိတ်
-directory များ
-လှူဒါန်းမှု
-နှိမ့်ချ
+လမ်းညွှန်များ
+လှူဒါန်းပါ
+ချ
 download,
-DOWNLOAD ရွေးချယ်စရာများ
+ရွေးချယ်စရာများကိုချပါ
 download speed
-downloaded
-ပြင်ဆင်ရန်
+ဒေါင်းလုပ်
+တည်းဖြတ်သည်
 embed
-Embedding (wordpress.com များအတွက်ဘလော့ဂ်များနှင့် archive.org ကို item <ဖော်ပြချက်> tags များတည်ခင်းဧည်)
+EMBED (wordpress.com မှဘလော့ဂ်များနှင့် archive.org item <ဖော်ပြချက်> tags များအတွက်)
 အင်္ဂလိပ်
-URL သို့မဟုတ်သော့ချက်စာလုံးများရိုက်ထည့်ပါ
-မှားယွင်းမှုများ
-etree
+URL သို့မဟုတ်သော့ချက်စာလုံးများကိုရိုက်ထည့်ပါ
+အမှားများ
+အဲရက်
 မျက်လုံး
 အကြိုက်ဆုံး
 အကြိုက်ဆုံး
-အကြိုက်ဆုံးဤအကြောင်းအရာအား
-ပိုပြီးရလဒ်များကိုရယူ
+ဤပစ္စည်းကိုအကြိုက်ဆုံး
+နောက်ထပ်ရလဒ်များကိုရယူခြင်း
 files
 ဖိုင်တွေ
-အဘို့အ files
+ဖိုင်များ
 အလံ
-အလံဤအကြောင်းအရာအား
-အလံဤအရာအတွက်
+ဤအရာကိုအလံပြပါ
+ဤအချက်ကိုအလံပြပါ
 ဖိုရမ်
 ဖိုရမ်
-ဖိုရမ်သေး DWeb အပေါ်မထောက်ပံ့ - ထိုအမွေကို web မှဦးတည်
-မျက်နှာပြင်အပြည့်အမြင်
-GO
+DWeb တွင်ဖိုရမ်ကိုမပံ့ပိုးရသေးပါ
+မျက်နှာပြင်အပြည့်
 သွား
-image ကိုကိုသွားပါ
-ကို item စာမျက်နှာကိုသွားပါ
-ဂရပ်ဖစ်လိင်ပိုင်းဆိုင်ရာအကြောင်းအရာ
+သွား
+ပုံကိုသွားပါ
+item စာမျက်နှာသို့သွားပါ
+ဂရပ်ဖစ်လိင်အကြောင်းအရာ
 ဂရပ်ဖစ်အကြမ်းဖက်မှု
 ကူညီပါ
-ပုံရိပ်
+ပုံ
 တွင်
-စုဆောင်းမှုထဲတွင်
+စုဆောင်းခြင်း၌တည်၏
 သတင်းအချက်အလက်
-အင်တာနက်ကမော်ကွန်းတိုက်
-အခမဲ့စာအုပ်များ, ရုပ်ရှင်များ, software များ, ဂီတ, ဝက်ဘ်ဆိုက်များနှင့်ထို့ထက် ပို. သန်းပေါင်းများစွာ၏ non-အမြတ်စာကြည့်တိုက်ဖြစ်ပါတယ်။
-အချက်
-အချက်
-ကို item ပုံရိပ်
-item ပုံရိပ်ကိုဆလိုက်ရှိုး
+အင်တာနက်မော်ကွန်းတိုက်
+အခမဲ့စာအုပ်များ၊ ရုပ်ရှင်များ၊ ဆော့ဖ်ဝဲများ၊ တေးဂီတ၊ ဝဘ်ဆိုက်များနှင့်အခြားအရာများစွာ၏အကျိုးအမြတ်မယူသောစာကြည့်တိုက်တစ်ခုဖြစ်သည်။
+ပစ္စည်း
+ပစ္စည်း
+item ပုံရိပ်
+ပစ္စည်းပုံပုံဆလိုက်ရှိုး
+အကြောင်းအရာ
 ပစ္စည်းများ
-ပစ္စည်းများ
-အလုပ်အကိုင်အခွင့်အ
+ယောဘ
 ဘာသာစကားများ
-နောက်ဆုံးအပ်ဒိတ်လုပ်
+နောက်ဆုံးထွက်
 loading
 တင်
 များအတွက်စာအုပ် metadata ကို Loading
-ဆက်စပ်ပစ္စည်းများကို Loading
-loading ရှာဖွေရေး
-သယ်ဆောင်နေပါသည်မယ့်အပတ်
-ဝန်
-ဒေသဆိုင်ရာ
+ဆက်စပ်ပစ္စည်းများတင်နေသည်
+ရှာဖွေမှုကိုတင်နေသည်
+စတင်နေပြီ
+ချော
+ဒေသခံ
 လိုဂို
 နောက်ထပ်ရလဒ်များ
 ရုပ်ရှင်တွေ
-အမည်
+နာမည်
 နောက်တစ်ခု
-ဒေါင်းလုတ်မဟုတ်
+ဒေါင်းလုပ်မရ
 ၏
+အော့ဖ်လိုင်း
 အပေါ်
 အင်တာနက်ပေါ်မှာ။
-အပြည့်အဝအရွယ် image ကိုဖွင့်ပါ
-options ကို
+အပြည့်အရွယ်အစားရှိတဲ့ပုံကိုဖွင့်ပါ
+ရွေးစရာများ
 မူရင်း
-5 ကြယ်များထဲက
-မိဘ Directory ကို
+ကြယ် ၅ ပွင့်ထဲက
+မိဘလမ်းညွှန်
 ရွယ်တူချင်း
 လူတွေ
-အားလုံး Play
-သင့်ရဲ့ကွန်ပျူတာပေါ်မှာသူတို့နှင့်အတူအပြန်အလှန်အားဤအကြောင်းအရာသည်အတွက် file တွေကို download လုပ်ပါ ကျေးဇူးပြု.
-ပေါင်း-စက်ဝိုင်း
+အားလုံးကစားပါ
+ကျေးဇူးပြု၍ ဤအရာရှိဖိုင်များကိုသင့်ကွန်ပျူတာပေါ်တွင်၎င်းတို့နှင့်အပြန်အလှန်ဆက်သွယ်ပါ
+စက်ဝိုင်းပုံ
 နံရံကပ်ကြော်ငြာ
-Post
-လွန်ခဲ့သော
+ပို့စ်များ
+Preview
+ရှေ့
 တိုးတက်ခြင်း
 စီမံကိန်းများ
-ဆံပင်ကြိုး
-Related ပစ္စည်းများ
+တန်းစီ
+ဆက်စပ်ပစ္စည်းများ
 သက်ဆိုင်ရာ
-ပြန်တင်ရန်
-ကိုဖယ်ရှား-စက်ဝိုင်း
-ပြန်စာများ
+ပြန်တင်ပါ
+ဖယ် - စက်ဝိုင်း
+ပြန်ကြားချက်များ
 အရင်းအမြစ်များ
-reviewer
+ပြန်လည်သုံးသပ်သူ
 သုံးသပ်ချက်
 အခွင့်အရေး
-တန်းစီမှာ
+အတန်းတွေ
 ပြေး
 ကြော်ငြာကို Save လုပ်ရန်
-ဒီ Save
-ဤအကြောင်းအရာအား Save
-သိမ်းဆည်းရန်
-ရှာဖှေ
-ရှာဖှေ
-မော်ကွန်းတင်ပြီးက်ဘ်ဆိုဒ်များကိုရှာရန်
-စာအုပ်တွေအပြည့်အဝစာသားကိုရှာပါ
-အထဲမှာရှာဖွေရေး
-ရှာရန် metadata ကို
-ရှာရန် Options ကို
-အဆိုပါမော်ကွန်းတိုက်ရှာရန်
-အဆိုပါမော်ကွန်းတိုက်တွင်ရှာပါ။ စိစစ်မှုများနှင့်အောက်တွင်ဖော်ပြထားသောရရှိနိုင်ပါ Advanced Search ။
-ဘီလီယံအထိ 338 ကျော်များ၏သမိုင်းရှာရန်
-အဆိုပါ Wayback စက်ရှာရန်
-ရှာရန်တီဗီစာတန်းများကို
+ဒီကိုသိမ်းပါ
+ဒီပစ္စည်းကိုသိမ်းပါ
+သိမ်းဆည်းပါ
+ရှာပါ
+ရှာဖွေသည်
+မော်ကွန်းတင်ထားသောဝက်ဘ်ဆိုက်များကိုရှာပါ
+စာအုပ်အပြည့်အစုံရှာဖွေပါ
+အတွင်းပိုင်းရှာဖွေပါ
+metadata ကိုရှာပါ
+ရှာရန်ရွေးစရာများ
+မော်ကွန်းတိုက်ကိုရှာပါ
+မော်ကွန်းတိုက်ကိုရှာပါ။ filter များနှင့် Advanced Search ကိုအောက်တွင်ရရှိနိုင်သည်။
+၃၃၈ ဘီလီယံကျော်၏သမိုင်းကိုရှာဖွေပါ
+Wayback စက်ကိုရှာပါ
+TV စာတန်းများကိုရှာပါ
 ရှာဖွေခြင်း
-အစေ့
-Settings များ
+မျိုးစေ့
+ချိန်ညှိချက်များ
+မျှဝေပါ
 ဝေစု
-ဝေစု
-ဝေမျှမယ်သို့မဟုတ် Embed ဒီ
-ဤအကြောင်းအရာအား Share
-SHOW
-ပြသ
-SHOW အားလုံး
-ဖိုင်များအားလုံးပြရန်
-စာရင်းအဖြစ်ပြရန်
-ပုံငယ်များပြရန်
-(metadata ကိုအပေါ်အခြေခံပြီး) အလားတူပစ္စည်းများ
-Software များ
-ဆော့ဖျဝဲ
+ဤအရာကိုမျှဝေပါသို့မဟုတ်ထည့်သွင်းပါ
+ဒီပစ္စည်းကိုမျှဝေပါ
+ပြပါ
+ပြ
+အားလုံးပြပါ
+ဖိုင်များအားလုံးကိုပြပါ
+စာရင်းအဖြစ်ပြသပါ
+သမ်းနေးပြပါ
+တူညီသောအကြောင်းအရာများ (metadata အပေါ်အခြေခံသည်)
+ဆော့ဝဲ
+ဆော့ဝဲ
 အလိုက်စဥ်သည်
-အသံကချွတ်သည်။ အသံကလစ်နှိပ်ပါ။
-အသံကပေါ်ဖြစ်ပါတယ်။ အသံကအသံပိတ်ဖို့ကိုနှိပ်ပါ။
-ပမ်, လိမ်လည်မှုသို့မဟုတ်အယောင်ဆောင်မှု
-သို့တိုင်အကောင်အထည်ဖော်လျက်ရှိ
+အသံပိတ်သွားတယ် အသံကိုနှိပ်ပါ။
+အသံသည်ဖွင့်နေသည်။ အသံတိတ်ရန်ကလစ်နှိပ်ပါ။
+Spam, လိမ်လည်မှုသို့မဟုတ်လိမ်လည်မှု
+အကောင်အထည်ဖော်ဆဲ
 ဘာသာရပ်
 Service ၏စည်းမျဉ်းများ
 စာသားများ
 စာသားများ
-အဘယ်သူမျှမပြန်လည်သုံးသပ်ခြင်းသေးရှိပါသည်။
-ဤအကြောင်းအရာသည် Archive.org အပေါ်ကြုံတွေ့နိုင်ဆိုဖိုင်တွေရှိသည်ဖို့ပေါ်လာပါဘူး
-tile ကို
+ပြန်လည်သုံးသပ်ခြင်းမရှိပါ။
+ဤအချက်သည် Archive.org တွင်တွေ့ကြုံနိုင်သောမည်သည့်ဖိုင်မျှမရှိပါ
+ကြွေပြား
 အချိန်
 ခေါင်းစဥ်
-အဆိုပါမော်ကွန်းတိုက်မှာထိပ်တန်းစုစည်းမှုများ
-တစ်ဦးထက်ပိုသောယေဘုယျရှာဖွေရေးကြိုးစားပါ
-ကွဲပြားခြားနားသောသော့ချက်စာလုံးများကိုစမ်းကြည့်ပါ
+မော်ကွန်းတိုက်မှာထိပ်တန်း collection များကို
+ပိုမိုယေဘုယျရှာဖွေမှုကိုကြိုးစားကြည့်ပါ
+ကွဲပြားခြားနားသောသော့ချက်စာလုံးများကြိုးစားပါ
 တီဗီ
 ရုပ်သံ
-universal စာကြည့်တိုက်
-မကိုက်ညီသည့် mediatype
-ထ
+Universal စာကြည့်တိုက်
+မထောက်ပံ့သောအမျိုးအစား
+တက်
 လွှတ်တင်ခြင်း
 အပ်လုဒ်ကို
-လွှတ်တင်ခြင်းမြန်နှုန်း
+တင်ယူမြန်နှုန်း
 အပ်လုတ်များ
 usage
 ဗီဒီယိုကို
 VIEWS
 အမြင်များ
 စေတနာ့ဝန်ထမ်း
-စောင့်ဆိုင်းနေ
-ပိုပြီးလုပ်ချင်ပါသလား
-WEB
+စောင့်နေသည်
+ပိုပြီးလိုချင်ပါသလား
+ဝက်ဘ်
 Web ကို
 ဝဘ်
-WEB archive
-web စာမျက်နှာများ
-အလုပ်လုပ်
-ပြန်လည်သုံးသပ်ရေး
-သင်၏ရှာဖွေမှုကို Archive အတွက်မဆိုပစ္စည်းများမကိုက်ညီခဲ့ပါဘူး။ အကြံပြုချက်များ
+ဝက်ဘ်ဆိုက်များ
+ဝဘ်စာမျက်နှာများ
+အပေါ်လုပ်ဆောင်နေသည်
+ပြန်လည်သုံးသပ်ချက်ရေးပါ
+သင်၏ရှာဖွေမှုသည်မော်ကွန်းတိုက်တွင်မည်သည့်ပစ္စည်းများနှင့်မကိုက်ညီပါ အကြံပြုချက်များ
